--- a/BillStoreAdmin/BillStoreAdminUI/InvoiceDetails.xaml
+++ b/BillStoreAdmin/BillStoreAdminUI/InvoiceDetails.xaml
@@ -172,7 +172,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.CellEditingTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding ItemName, UpdateSourceTrigger=PropertyChanged}"/>
+                            <TextBox Text="{Binding Path=ItemName, UpdateSourceTrigger=PropertyChanged}"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellEditingTemplate>
                 </DataGridTemplateColumn>               
